vlib/v/checker/tests/short_struct_wrong_number.vv
struct Test {
	foo bool
	bar bool
}

fn main() {
	_ = Test{true}
	_ = Test{true, false, true}
}
